Fixed styling for sections content overlapping one anoter

--- a/frontend/components/home/stylesheets/home.less
+++ b/frontend/components/home/stylesheets/home.less
@@ -17,7 +17,7 @@ section.contact {
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .contact__title {
