--- a/frontend/components/home/stylesheets/jumbotron.less
+++ b/frontend/components/home/stylesheets/jumbotron.less
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding: 0px 200px;
     @media screen and (max-width: @desktop) {
