--- a/frontend/components/home/stylesheets/plan-your-trip.less
+++ b/frontend/components/home/stylesheets/plan-your-trip.less
@@ -5,7 +5,7 @@
     justify-content: space-around;
     align-items: center;
     background: @light-blue;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding: @space-xl;
     overflow: hidden;
