--- a/frontend/components/home/stylesheets/share-family.less
+++ b/frontend/components/home/stylesheets/share-family.less
@@ -6,7 +6,7 @@
     align-items: center;
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     @media screen and (max-width: @desktop) {
         align-items: flex-start;
         justify-content: center;
